# magictype

./: README.md  __init__.py  pyproject.toml
tests/: __init__.py
