[tool.poetry]
name = "magictype-franz"
version = "0.1.0"
description = "generate type hints using magic"
authors = ["franzkurt <franz.gastring@gmail.com>"]
readme = "README.md"
license= "MIT"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
